# LINCOLN

./: .firebaserc  .gitignore  CONTEXT.md  CORRECCION_ERRORES.md  DEBUG_STEPS.md  DETECCION_SETUP.md  FIREBASE_IMPLEMENTATION_GUIDE.md  FIREBASE_IMPLEMENTATION_SUMMARY.md  FIX_NOW.md  GUIA_PERSISTENCIA.md  IMPLEMENTACION_COMPLETA.md  INICIO_RAPIDO.md  MEJORAS_CTRL_C.md  PERSISTENCIA_SESION.md  QUICK_START.md  README.md  REINICIAR_LIMPIO.md  SOLUCION_PERSISTENCIA.md  SOLUCION_PUERTO_8080.md  START_BACKEND.ps1  START_EVERYTHING.md  cleanup.ps1  export-firestore.ps1  firebase.json  firestore.indexes.json  firestore.rules  go.mod  init-data-if-empty.js  install-dependencies.ps1  restart-lincoln.ps1  start-dev.js  start-emulators.ps1  start-firebase.ps1  start-functions.ps1  start-lincoln.ps1  start-simple-no-functions.ps1  start-simple.ps1  start-with-data.ps1  start.ps1  stop.ps1  (+2 more)
backend/: README.md
backend/c++/: CMakeLists.txt  INSTALL_COMPILER.md  TROUBLESHOOTING.md  build.ps1  test_backend.ps1
backend/c++/include/database/: database.h
backend/c++/include/models/: user.h
backend/c++/include/services/: auth_service.h
backend/c++/include/utils/: crypto.h
backend/c++/src/: main.cpp
backend/c++/src/database/: database.cpp
backend/c++/src/services/: auth_service.cpp
backend/c++/src/utils/: crypto.cpp
configs/: config.example.toml
frontend/: .env.development  README.md  README_RUN.md  README_STATIC.md  index.html  login.html  package-lock.json  package.json  register.html  tsconfig.json  vite.config.ts
functions/: .eslintignore  .eslintrc.js  index.js  package-lock.json  package.json
scripts/: auto-detection-wrapper.js  check-detection-status.js  check-metrics.js  clear-firestore.js  debug-detection-steps.js  init-test-data.js  package-lock.json  package.json  populate-firestore.js  populate-server-metrics.js  run-automatic-detection.js  run-detection-after-attack.js  run-detection-create-alerts.js  run-detection-direct-final.js  run-detection-direct.js  setup-detection-config.js  simulate-attack.js  view-data.js  (+8 more)
(+149 files in other folders)
